<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_menu_home">

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="582dp"
        android:orientation="vertical"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackk6"
            android:layout_width="48dp"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            app:tint="@android:color/white"
            android:onClick="goBack"
            android:contentDescription="@string/garage_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/garage_title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/houseItemIcon"
                android:layout_width="159dp"
                android:layout_height="151dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_garage"
                android:contentDescription="@string/garage_icon_desc" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="52dp">
                <Button
                    android:id="@+id/buttonUpGarage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonUpGarageClic"
                    android:text="@string/garage_open"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="99dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#7C4DFF"
                    android:textColor="#FFFFFF"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/buttonDownGarage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonDownGarageClic"
                    android:text="@string/garage_close"
                    app:layout_constraintTop_toBottomOf="@+id/buttonUpGarage"
                    tools:layout_editor_absoluteX="107dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#7C4DFF"
                    android:textColor="#FFFFFF"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/buttonStopGarage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonStopGarageClic"
                    android:text="@string/garage_stop"
                    app:layout_constraintTop_toBottomOf="@+id/buttonDownGarage"
                    tools:layout_editor_absoluteX="105dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#7C4DFF"
                    android:textColor="#FFFFFF"
                    android:fontFamily="sans-serif-medium"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>